--- a/Dashboard/Views/Shared/_menu.cshtml
+++ b/Dashboard/Views/Shared/_menu.cshtml
@@ -178,6 +178,20 @@
                 </li>
             }
 
+            @if (viewList.Contains((int)DashboardViewEnum.PlayerGameWeak))
+            {
+                <li id="PlayerGameWeakList" class="@(active ==DashboardViewEnum.PlayerGameWeak.ToString()?"active":"") nav-item">
+                    <a class="d-flex align-items-center"
+                       asp-action="Index" asp-area="PlayerScoreEntity"
+                       asp-controller="PlayerGameWeak">
+                        <i data-feather='flag'></i>
+                        <span class="menu-title text-truncate">
+                            @Localizer.Get("PlayersGameWeaks")
+                        </span>
+                    </a>
+                </li>
+            }
+        
             @if (viewList.Contains((int)DashboardViewEnum.TeamGameWeak))
             {
                 <li id="TeamGameWeakList" class="@(active ==DashboardViewEnum.TeamGameWeak.ToString()?"active":"") nav-item">
